--- a/models/fst/environment.yml
+++ b/models/fst/environment.yml
@@ -1,14 +1,9 @@
-name: g2p-2020-bl
+name: g2p-fst
 channels:
  - conda-forge
 dependencies:
  - baumwelch=0.3.5
  - ngram=1.3.12
- - numpy=1.19.2
- - openfst=1.8.0
- - pandas=1.1.3
- - pip=20.3
+ - numpy=1.19.5
  - pynini=2.1.3
  - python=3.8.5
- - pytorch=1.6.0
- - fairseq==0.10.1
