Added training result for the neural transducer model (21/22 baseline)

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,7 @@ models/transformer/checkpoints/
 models/transformer/data-bin/
 models/transformer/*.log
 
+models/*/__pycache__/
+models/*/*/__pycache__/
+
 Note.md
