--- a/models/transformer/environment.yml
+++ b/models/transformer/environment.yml
@@ -7,3 +7,7 @@ dependencies:
  - pytorch=1.6.0
  - fairseq=0.10.1
  - numpy=1.19.5
+ - pandas=1.1.3
+ - matplotlib=3.3.2
+ - pandas=1.1.3
+ - matplotlib=3.3.2
